RESOLVED FIXED212044
[WinCairo] WKTR WebsiteDataStore is being overwritten by the default one
https://bugs.webkit.org/show_bug.cgi?id=212044
Summary [WinCairo] WKTR WebsiteDataStore is being overwritten by the default one
Christopher Reid
Reported 2020-05-18 13:39:48 PDT
This causes some Service Worker tests which expect clean DataStores to fail because they aren't using the temporary WebsiteDataStore.
Attachments
patch (1.51 KB, patch)
2020-05-18 13:44 PDT, Christopher Reid
no flags
Patch for landing (4.14 KB, patch)
2020-05-18 19:11 PDT, Christopher Reid
no flags
Christopher Reid
Comment 1 2020-05-18 13:44:42 PDT
Don Olmstead
Comment 2 2020-05-18 18:20:31 PDT
Comment on attachment 399673 [details] patch There's a related block of code at platformInitializeDataStore which GTK and WPE implement in their respective TestController files. I'd wager that their implementation should just be shared in this file. Also while you're in there maybe add a !PLATFORM(COCOA) comment at the end of the #if !PLATFORM(COCOA) block this lives in.
Christopher Reid
Comment 3 2020-05-18 18:42:50 PDT
(In reply to Don Olmstead from comment #2) > Comment on attachment 399673 [details] > patch > > There's a related block of code at platformInitializeDataStore which GTK and > WPE implement in their respective TestController files. I'd wager that their > implementation should just be shared in this file. > Yeah, for reference wincairo recently started to hit crashes without that change similar to r261758.
Christopher Reid
Comment 4 2020-05-18 19:11:00 PDT
Created attachment 399697 [details] Patch for landing
EWS
Comment 5 2020-05-18 19:41:16 PDT
Committed r261846: <https://trac.webkit.org/changeset/261846> All reviewed patches have been landed. Closing bug and clearing flags on attachment 399697 [details].
Radar WebKit Bug Importer
Comment 6 2020-05-18 19:42:15 PDT
Note You need to log in before you can comment on or make changes to this bug.