[WinCairo] WKTR WebsiteDataStore is being overwritten by the default one https://bugs.webkit.org/show_bug.cgi?id=212044

Reviewed by Fujii Hironori.

Ensure TestController::defaultWebSiteDataStore is being used for WinCairo as done in r259705.

Also consolidate platformInitializeDataStore implementations with GTK/WPE since WinCairo WKTR
also started crashing since r261758.

* WebKitTestRunner/TestController.cpp:
* WebKitTestRunner/gtk/TestControllerGtk.cpp:
* WebKitTestRunner/wpe/TestControllerWPE.cpp:


Canonical link: https://commits.webkit.org/224936@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261846 268f45cc-cd09-0410-ab3c-d52691b4dbfc