Tools/WebKitTestRunner/wpe/TestControllerWPE.cpp
@@ -45,11 +45,6 @@ void TestController::platformInitialize()
 {
 }
 
-void TestController::platformInitializeDataStore(WKPageConfigurationRef, const TestOptions& options)
-{
-    m_websiteDataStore = defaultWebsiteDataStore();
-}
-
 WKPreferencesRef TestController::platformPreferences()
 {
     return WKPageGroupGetPreferences(m_pageGroup.get());
